--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ByteMe</string>
     <string name="VisionAPI_KEY">AIzaSyC1JY9HMC_tUyqeiuIkRnNCXSRJAbtzhpk</string>
+    <string name="ML_API_KEY">AIzaSyC1JY9HMC_tUyqeiuIkRnNCXSRJAbtzhpk</string>
 </resources>
