--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="action_settings">Settings</string>
     <string name="bug_model">ICN7691401765690711773</string>
     <string name="bite_model">ICN7691401765690711773</string>
-    <string name="project_id">prime-hour-232619</string>
+    <string name="proj_id" translatable="false">prime-hour-232619</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
